# bacpage_nmimr

./: .dockerignore  .dockstore.yml  Dockerfile  Instructions_for_Setup.md  README.md  bacpage_docker_setup.md  environment.yaml  environment_docker.yaml  environment_test.yaml  pyproject.toml  setup.ps1  setup.sh
bacpage/: __init__.py  command.py
bacpage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bacpage/resources/: cholera_gubbins_mask.gff  multiqc_config.yaml
bacpage/rules/: assemble.smk  denovo.smk  phylogeny.smk  profiling.smk  quality-control.smk
bacpage/schemas/: Illumina_config.schema.yaml  Illumina_metadata.schema.yaml  assemble_config.schema.yaml  illumina_config.template.yaml  phylogeny_config.schema.yaml
bacpage/scripts/: calculate_typing_stats.py  plot_coverage.py
bacpage/src/: assemble.py  common_funcs.py  example.py  identify.py  phylogeny.py  profiling.py  version.py
bacpage/workflows/: assemble.wdl  multiqc.wdl  phylogeny.wdl
test/: test_assemble.py  test_common_funcs.py  test_example.py  test_extract_region.py  test_identify.py  test_phylogeny.py  test_profile.py  test_vcf.vcf
test/configs/: absolute_parameters.yaml  assemble_only.yaml  local_parameters.yaml  phylogeny_only.yaml
test/sample_datas/: duplicate_names.csv  illegal_characters.csv  number_name.csv
test/test_extract_script/: config.yaml  regions.bed  regions.gff  test.bed
test/test_find_assemblies/: config.yaml
test/test_pipeline/: config.yaml  sample_data.csv
test/test_tree_duplicate_samples/: t3.fasta
test/test_tree_duplicate_sequences/: t1.fasta
test/test_vcf_to_fasta/: chroms.txt  (+3 more)
(+42 files in other folders)
